# common-code

./: .gitignore  .gitmodules  CMakeLists.txt  CommonCode.sln  README.md
Common-Code/Headers/: StringUtil.h  Types.h
Common-Code/Source/: StringUtil.cpp
CommonCode/Headers/: CCBuffer.h  CCIBuffer.h  CCMacros.h  CCStringUtil.h  CCTypes.h
Headers/: CCAPIAnnotations.h  CCArrayIterator.h  CCBuffer.h  CCDynamicBuffer.h  CCForwardList.h  CCIBuffer.h  CCIPointer.h  CCList.h  CCMacros.h  CCPointer.h  CCPointerCommonHelpers.h  CCPointerHelper.h  CCPointerHelpers.h  CCQueue.h  CCSharedPointer.h  CCStack.h  CCString.h  CCStringLiteral.h  CCStringUtil.h  CCTypes.h  Macros.h  StringUtil.h  StringUtil.hpp  Types.h  Uncopyable.h  Unmovable.h
Source/: StringUtil.cpp
UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/Headers/: CCBufferTests.h  CCDynamicBufferTests.h  CCForwardListTests.h  CCIPointer.h  CCListTests.h  CCPointerCommonHelpersTests.h  CCPointerHelperTests.h  CCPointerHelpersTests.h  CCPointerTests.h  CCQueueTests.h  CCSharedPointerTests.h  CCStackTests.h  CCStringLiteralTests.h  CCStringTests.h  CCStringUtilTests.h  StringUtilTests.h  TestHelpers.hpp  TestSets.h
UnitTests/Source/: CCBufferTests.cpp  CCDynamicBufferTests.cpp  CCForwardListTests.cpp  CCListTests.cpp  CCPointerCommonHelpersTests.cpp  CCPointerHelperTests.cpp  CCPointerHelpersTests.cpp  CCPointerTests.cpp  CCQueueTests.cpp  CCSharedPointerTests.cpp  CCStackTests.cpp  CCStringLiteralTests.cpp  CCStringTests.cpp  CCStringUtilTests.cpp  RunTests.cpp  TestSets.cpp
